# reelchest

./: .gitignore  Dockerfile  README.md  addDup.http  build.gradle.kts  gradle.properties  settings.gradle.kts  versions.properties
.fleet/: settings.json
.github/workflows/: build_app.yml
.junie/: backend-architecture.md  guidelines.md  schema.md  scratchpad.txt
backend/: build.gradle.kts  gradle.properties  routes.md
backend/test_media_library/database/: db.sqlite
documents/: similarity_search_for_videos.md
duplicates-agent-rs/: .gitignore  Cargo.toml  README.md
duplicates-agent-rs/.cargo/: config
duplicates-agent-rs/src/: dhash.rs  disk_cache.rs  duplicate_calculator.rs  main.rs  network.rs
frontend/: .gitignore  .proxyrc  build.gradle.kts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/dev-proxy/: server.js
frontend/src/: App.tsx  index.html  main.ts  main.tsx  utils.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  MediaLibraryCard.tsx  (+6 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobileapp/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mobileapp/.fleet/: run.json  settings.json
mobileapp/androidApp/: build.gradle.kts
mobileapp/gradle/: libs.versions.toml
mobileapp/mediaPlayer/: build.gradle.kts  mediaPlayer.podspec
mobileapp/shared/: build.gradle.kts
mobileapp/webView/: build.gradle.kts  webView.podspec
mobileapp/windowManager/: README.md  build.gradle.kts  windowManager.podspec
process/: build.gradle.kts
(+195 files in other folders)
