[package]
name = "rovehide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
itertools = "0.12.0"
reqwest = { version = "0.11.23", features = ["json", "rustls"], default-features = false }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
futures = "0.3.30"
rand = "0.8.5"
num_cpus = "1.16.0"